--- a/main.css
+++ b/main.css
@@ -12,20 +12,22 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    background-image: url(assets/walle-bg.jpg);
+    background-size: cover;
 }
 
 .game-header {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    border-bottom: 1px solid red;
 }
 
 .game-header h1 {
     font-family: 'Schoolbell', cursive;
-    font-size: 4em;
-    margin: 20px;
+    font-size: 6em;
+    margin-top: 20px;
+    color: orangered;
+    text-shadow: 0 0 5px #000;
 }
 
 .game-area {
@@ -40,7 +42,13 @@
 }
 
 #matching-position {
-    border: 10px solid black;
+    background-image: url(assets/border-red.png);
+    background-size: 100% 100%;
+}
+
+#matching-element {
+    background-image: url(assets/walle-cut.png);
+    background-size: 100% 100%;
 }
 
 #matching-element::before {
@@ -50,24 +58,21 @@
     left: 10px;
     width: 220px;
     height: 220px;
-
-    background-color: red;
 }
 
 .finished {
     height: 100%;
     position: relative;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
     z-index: 2;
 }
 
 .finished h1 {
     font-family: 'Schoolbell', cursive;
-    font-size: 3em;
+    font-size: 4em;
     margin: 20px;
     color: orangered;
 }
